[gd_scene load_steps=17 format=3 uid="uid://bvmwfn05o86yj"]

[ext_resource type="Script" uid="uid://db7xmfb528gh4" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://wbsm41042k22" path="res://Assets/Prototype_art/player_bloc2.png" id="1_l8h54"]
[ext_resource type="PackedScene" uid="uid://jn18vmulh7f5" path="res://Player/past_player.tscn" id="2_btcbx"]
[ext_resource type="PackedScene" uid="uid://c0lkdknqo45ay" path="res://Player/projectile.tscn" id="2_k53q1"]
[ext_resource type="PackedScene" uid="uid://dkr23ytvjjaw7" path="res://Player/ui_life.tscn" id="3_gwnis"]
[ext_resource type="Texture2D" uid="uid://cgkvb6fboy30c" path="res://Assets/player/bunny-Sheet.png" id="6_fhl08"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_btcbx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_btcbx"]
radius = 12.3693

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("6_fhl08")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("6_fhl08")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("6_fhl08")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("6_fhl08")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("6_fhl08")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("6_fhl08")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("6_fhl08")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gu6f8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtle1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_od3ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_4ntmi")
moving_speed = 600
projectile = ExtResource("2_k53q1")
friction = 0.6
acceleration = 0.1
bounce_strength = 8
past_1 = ExtResource("2_btcbx")

[node name="UI_LIFE" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_gwnis")]
player = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_l8h54")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
material = SubResource("CanvasItemMaterial_btcbx")
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_btcbx")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -37.0

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -26.0
offset_top = -45.0
offset_right = 32.0
offset_bottom = -34.0
max_value = 5.0
value = 4.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gu6f8")
animation = &"jump"
frame_progress = 0.505772

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
